--- a/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -60,10 +60,10 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what are linear combination of vectors\n",
-    "- what is a _span_ of a set of vectors\n",
-    "- what is linear dependence (and independence)\n",
-    "- how to check linear dependence"
+    "- how to take linear combinations of vectors\n",
+    "- what the a _span_ of a set of vectors is\n",
+    "- what it means for a collection of vectors to be linearly dependent and independent\n",
+    "- how to check for linear dependence and independence"
    ]
   },
   {
@@ -71,9 +71,11 @@
    "id": "170438e7",
    "metadata": {},
    "source": [
-    "## Spanning a subspace\n",
+    "## Span and Linear Independence\n",
     "\n",
-    "One natural way of constructing a subspace is using some fundamental vectors in the subspace and takng all possible linear combinations of them.\n",
+    "### Building Subspaces\n",
+    "\n",
+    "One natural way of constructing a subspace is to start with some building blocks $\\vv v_1, \\dots, \\vv v_k\\in V$ from the vector space $V$ we are working in, and to consider all possible _linear combinations_ of them.\n",
     "\n",
     ":::{prf:definition} Linear Combination and Span\n",
     ":label: ln_comb\n",
@@ -82,7 +84,7 @@
     "\\label{lin_comb_eqn}\n",
     "c_1 \\vv v_1 + c_2 \\vv v_2 + \\ldots + c_k \\vv v_k = \\sum_{i=1}^k c_i \\vv v_i,\n",
     "\\end{equation}\n",
-    "where the coeﬃcients $c_1 , c_2 ,\\ldots , c_k$ are any scalars, is known as a _linear combination_ of the elements $\\vv v_1 , \\ldots, \\vv v_k$. Their _span_ is the subset\n",
+    "where the coeﬃcients $c_1 , c_2 ,\\ldots , c_k$ are scalars, is known as a _linear combination_ of the elements $\\vv v_1 , \\ldots, \\vv v_k$. Their _span_ is the subset\n",
     "\\begin{equation}\n",
     "\\label{span_eqn}\n",
     "W =\\textrm{span}\\{\\vv v_1 , \\ldots, \\vv v_k\\} \\subset V\n",
@@ -99,9 +101,11 @@
     "\n",
     "A plane and a line spanned by two vectors $\\vv v_1, \\vv v_2$ is given in [](#span_fig). In the case of the line, there is some scalar $c \\in \\mathbb{R}$ such that $\\vv v_1 = c \\vv v_2$. \n",
     "\n",
-    "```{important}\n",
+    "```{important} Key Fact\n",
     "The span $W =\\textrm{span}\\{\\vv v_1 , \\ldots, \\vv v_k\\}$ of any finite collection of vector space elements $\\vv v_1 , \\ldots, \\vv v_k \\in V$ is a [subspace](./032-subspaces.ipynb#sub_def) of $V$.\n",
-    "```"
+    "```\n",
+    "\n",
+    "This key fact is not hard to check using the properties of vector addition and scalar multiplication, but it is a surprisingly powerful tool for generating useful subspaces, and for checking if a vector $\\vv v \\in V$ also lives in a subspace $W$."
    ]
   },
   {
@@ -172,9 +176,7 @@
     ":::{prf:example} Span in a function space\n",
     ":label:span_lin_ind-ex3\n",
     "\n",
-    "Let $V = \\mathcal F(\\mathbb R)$ denote the space of scalar functions $f(x)$ defined on $\\mathbb R$. \n",
-    "\n",
-    "1. The span of the three monomials $f_1(x) = 1$, $f_2(x) = x$, $f_3(x) = x^2$ is the set of functions of the form:\n",
+    "Let $V = \\mathcal F(\\mathbb R)$ denote the space of scalar functions $f(x)$ defined on $\\mathbb R$. The span of the three monomials $f_1(x) = 1$, $f_2(x) = x$, $f_3(x) = x^2$ is the set of functions of the form:\n",
     "\n",
     "\\begin{align*}\n",
     "    f(x) = c_1f_1(x) + c_2f_2(x) + c_3f_3(x) = c_1 + c_2x + c_3x^2\n",
@@ -190,13 +192,13 @@
    "id": "074b4c99-6806-4d0c-b595-f0ae8f9ea783",
    "metadata": {},
    "source": [
-    "## Linear Independence and Dependence\n",
+    "### Linear Independence and Dependence\n",
     "\n",
     "_Linear dependence_ captures a notion of \"redundancy\" in a collection of vectors. \n",
     "\n",
     ":::{prf:definition} Linear dependency\n",
     ":label:lin_dep\n",
-    "The vector space elements $\\vv v_1 , \\ldots , \\vv v_k \\in V$ are called _linearly dependent_ if there exist scalars $c_1 , \\ldots , c_k$, not all zero, such that\n",
+    "The vectors $\\vv v_1 , \\ldots , \\vv v_k \\in V$ are _linearly dependent_ if there exist scalars $c_1 , \\ldots , c_k$, _not all zero_, such that\n",
     "\\begin{equation}\n",
     "\\label{lin_dep_eqn}\n",
     "c_1 \\vv v_1 + \\ldots + c_k \\vv  v_k = \\vv 0.\n",
@@ -204,7 +206,7 @@
     "Elements that are not linearly dependent are called _linearly independent_.\n",
     ":::\n",
     "\n",
-    "The condition [](#lin_dep_eqn) implies that we can write each of the $\\vv v_i$ as a linear combination of the other vectors. Hence, it does not add anything new to the span of the collection $\\vv v_1 , \\ldots , \\vv v_k$."
+    "The condition [](#lin_dep_eqn) implies that we can write at least one of the $\\vv v_i$ as a linear combination of the other vectors: hence, it does not add anything new to the span of the collection $\\vv v_1 , \\ldots , \\vv v_k$."
    ]
   },
   {
@@ -242,6 +244,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98c210d1-fc26-4100-9687-7c0a90c8367f",
+   "metadata": {},
+   "source": [
+    ":::{prf:example}\n",
+    ":label:ex_e_dep\n",
+    "\n",
+    "The vectors\n",
+    "\\begin{equation}\n",
+    "\\label{ex_e_eqn}\n",
+    "\\vv v_1 = \\bm 1 \\\\ 2 \\\\ 1\\em,\n",
+    "\\vv v_2 = \\bm 0 \\\\ 3 \\\\ 1\\em,\n",
+    "\\end{equation}\n",
+    "are linearly independent.  To see this, suppose that\n",
+    "$$\n",
+    "c_1 \\vv v_1 + c_2 \\vv v_2 = \\bm c_1 \\\\ 2c_1 + 3c_2 \\\\ -c_1 + c_2 \\em = \\bm 0 \\\\ 0 \\\\ 0 \\em.\n",
+    "$$\n",
+    "because the only way this can happen is if $c_1 = 0$, but then this immediately implies that $c_2 = 0$.\n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7a138320",
    "metadata": {},
    "source": [
@@ -273,9 +297,9 @@
     "Given the task of checking whether $\\vv v_1 , \\ldots , \\vv v_k \\in \\mathbb{R}^n$ is linearly dependent, we start by constructing the $n \\times k$ matrix $A = \\bm \\vv v_1 & \\ldots & \\vv v_k \\em$ with columns defined by $\\vv v_i$. Using matrix-vector multiplication, we interpret [](#lin_dep_eqn) as \n",
     "\\begin{equation}\n",
     "\\label{mat_vec_dep}\n",
-    "A \\vv c =  c_1 \\vv v_1 + \\ldots + c_k \\vv  v_k, \\ \\textrm{where} \\ \\vv c = \\bm c_1 \\\\ c_2 \\\\ \\vdots \\\\ c_k \\em\n",
+    "A \\vv c =  c_1 \\vv v_1 + \\ldots + c_k \\vv  v_k, \\ \\textrm{where} \\ \\vv c = \\bm c_1 \\\\ c_2 \\\\ \\vdots \\\\ c_k \\em,\n",
     "\\end{equation}\n",
-    "The above equation helps us relate linear algebraic systems with the geometry of the span of vectors.\n",
+    "that is, we write any linear combination of the vectors $\\vv v_1, \\dots, \\vv v_k$ weighted by coefficients $c_1, \\dots, c_k$ in terms of matrix multiplication.  The above equation helps us relate linear algebraic systems with the geometry of the span of vectors.\n",
     "\n",
     "```{prf:theorem}\n",
     ":label: lin_dep_thm\n",
@@ -296,9 +320,9 @@
     "```\n",
     "\n",
     "```{note} Observations from [](#lin_dep_thm)\n",
-    "1. Any collection of $k > n$ vectors in $\\mathbb{R}^n$ is linearly dependent because we have more variables (columns) than equations (rows). Hence, we must have at least one [free variable](../Linear_Algebraic_Systems/026-linsys-general.ipynb#free_basic_defn).\n",
-    "2. A collection of $k$ vectors in $\\mathbb{R}^n$ is linearly independent if and only if the equation $A \\vv c = \\vv 0$ has no free variables, that is, [rank](../Linear_Algebraic_Systems/026-linsys-general.ipynb#rank_defn)($A$) = number of pivots = $k$. This requires $k \\leq n$. \n",
-    "3. A collection of $k$ vectors span $\\mathbb{R}^n$ if and only if the corresponding $n \\times k$ matrix has rank $n$. This requires $k \\geq n$.\n",
+    "1. Any collection of $k > n$ vectors in $\\mathbb{R}^n$ is linearly dependent because we have more variables (columns) than equations (rows). Hence, we must have at least one [free variable](../00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb#free_basic_defn).\n",
+    "2. A collection of $k$ vectors in $\\mathbb{R}^n$ is linearly independent if and only if the equation $A \\vv c = \\vv 0$ has no free variables, that is, [rank](../00_Ch_1_Linear_Algebraic_Systems//026-linsys-general.ipynb#rank_defn)($A$) = number of pivots = $k$. This requires $k \\leq n$. \n",
+    "3. A collection of $k$ vectors spans $\\mathbb{R}^n$ if and only if the corresponding $n \\times k$ matrix has rank $n$. This requires $k \\geq n$.\n",
     "```"
    ]
   },
