determinants page, still need to add qr case study

--- a/06_Ch_7_Eigenvalues/082-determinants.ipynb
+++ b/06_Ch_7_Eigenvalues/082-determinants.ipynb
@@ -45,9 +45,48 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is the determinant of a matrix?\n",
+    "- What is the relationship between the determinant of a square matrix and its invertibility?\n",
     "- What are several ways to find the determinant?\n",
-    "- What are key properties of the determinant?"
+    "- What is a formal definition of the determinant?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Determinants\n",
+    "\n",
+    "We assume that you have already seen determinants in Math 1410, and focus here on reviewing the  key properties. Before proceeding, we pause to note that determinants have very deep meanings, especially in differential calculus, as they keep track of volumes as they are transformed via (linear or otherwise) functions. They are indeed very useful theoretical tools, but much like matrix inverses, are rarely computed by hand, except for $2 \\times 2$ cases. Below is a helpful link if you need a refresher on the determinant.\n",
+    "\n",
+    "* [Math 1410 video lecture (geometric interpretation of the determinant for small matrices)](https://www.youtube.com/watch?v=6hXxrbnbtC4)\n",
+    "\n",
+    "## Determinants and Invertibility\n",
+    "\n",
+    "First, we'll state a couple of key facts about the determinant.\n",
+    "\n",
+    "\n",
+    ":::{prf:definition} Key Properties of the Determinant\n",
+    ":label: determinant-properties-defn\n",
+    "\n",
+    "1. The determinant of a matrix $A$, written $\\det A$ or $|A|$, is only defined if $A$ is square.\n",
+    "\n",
+    "2. The determinant of a $1\\times 1$ matirx $A = [a]$ is $\\det [a] = a$. The determinant of a $2 \\times 2$ matrix is $\\det \\bm a & b\\\\ c & d \\em= ad - bc$. You may recognize this expression from our formula for the inverse of a $2\\times 2$ matrix:\n",
+    "\\begin{align*}\n",
+    "\\bm a & b\\\\c&d \\em^{-1} = \\frac{1}{ad -bc}\\bm d&-b\\\\-c&a \\em.\n",
+    "\\end{align*}\n",
+    "\n",
+    "In this case, $\\bm a & b\\\\c&d \\em^{-1}$ exists if and only if $\\det \\bm a & b\\\\c&d \\em = ad - bc \\neq 0$. This observation is true in general:\n",
+    "\n",
+    "3. $A^{-1}$ exists, i.e., $A$ is nonsingular, if and only if, $\\det A \\neq 0$.\n",
+    "\n",
+    "A corollary of Fact 3, which we will use in our eigenvalue computations, is that $A$ is singular if and only if $\\det A = 0$.\n",
+    ":::\n",
+    "\n",
+    "These facts are all we need for now to get started finding eigenvalues.\n",
+    "\n",
+    "## Computing Determinants\n",
+    "\n",
+    "TODO QR factorization case study"
    ]
   },
   {
