expanded characteristics equation exercise

--- a/06_Ch_7_Eigenvalues/083-characteristic_equations.ipynb
+++ b/06_Ch_7_Eigenvalues/083-characteristic_equations.ipynb
@@ -99,14 +99,16 @@
     "You should get that the eigenvectors corresponding to $\\lambda_1 = 2$ are:\n",
     "\n",
     "\\begin{align*}\n",
-    "\\text{span} \\left\\{  \\bm 1\\\\ 1\\em \\right\\}\n",
+    "\\text{span} \\left\\{  \\bm -1\\\\ 1\\em \\right\\}\n",
     "\\end{align*}\n",
     "\n",
     "and the eigenvectors corresponding to $\\lambda_2 = 4$ are:\n",
     "\n",
     "\\begin{align*}\n",
-    "\\text{span} \\left\\{  \\bm -1\\\\ 1 \\em \\right\\}.\n",
+    "\\text{span} \\left\\{  \\bm 1\\\\ 1 \\em \\right\\}.\n",
     "\\end{align*}\n",
+    "\n",
+    "We typically only distinguish linearly independeny eignevectors. In this case, we would say that $\\vv{v_1} = \\bm 1\\\\1 \\em$ is *the* eigenvector corresponding to $\\lambda_2 = 4$, although it is understood that any vector $\\vv{\\tilde{v_1}} = a \\vv{v_1}$, for $a \\neq 0$, is also a valid eigenvector.\n",
     "\n",
     ":::\n"
    ]
