--- a/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/033-span_lin_ind.ipynb
@@ -60,7 +60,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- how to take linear combinations of vectors\n",
+    "- how to form linear combinations of vectors\n",
     "- what the a _span_ of a set of vectors is\n",
     "- what it means for a collection of vectors to be linearly dependent and independent\n",
     "- how to check for linear dependence and independence"
