stylistic change for lecture objectives

--- a/06_Ch_7_Eigenvalues/081-eigenvalues_eigenvectors.ipynb
+++ b/06_Ch_7_Eigenvalues/081-eigenvalues_eigenvectors.ipynb
@@ -45,8 +45,8 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What are the eigenvalues and eigenvectors of a square matrix $A$?\n",
-    "- How do you find the eigenvectors corresponding to an eigenvalue?"
+    "- the definition of the eigenvalues and eigenvectors of a square matrix $A$,\n",
+    "- how to find the eigenvectors corresponding to an eigenvalue."
    ]
   },
   {
