--- a/06_Ch_7_Eigenvalues/082-determinants.ipynb
+++ b/06_Ch_7_Eigenvalues/082-determinants.ipynb
@@ -45,9 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is the relationship between the determinant of a square matrix and its invertibility?\n",
-    "- What are several ways to find the determinant?\n",
-    "- What is a formal definition of the determinant?"
+    "- the relationship between the determinant of a square matrix and its invertibility,\n",
+    "- several ways to find the determinant of a matrix,\n",
+    "- (optional) the formal definition of a determinant."
    ]
   },
   {
