--- a/06_Ch_7_Eigenvalues/083-characteristic_equations.ipynb
+++ b/06_Ch_7_Eigenvalues/083-characteristic_equations.ipynb
@@ -45,8 +45,8 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is the characteristic equation of a square matrix $A$?\n",
-    "- How can we find the eigenvalues of a square matrix by solving its characteristic equation?"
+    "- how to define the characteristic equation of a square matrix $A$,\n",
+    "- how to solve the characteristic equation to find the eigenvalues of $A$."
    ]
   },
   {
