--- a/06_Ch_7_Eigenvalues/084-eigenspaces.ipynb
+++ b/06_Ch_7_Eigenvalues/084-eigenspaces.ipynb
@@ -45,7 +45,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is the eigenspace corresponding to an eigenvector?"
+    "- how to define the eigenspace corresponding to an eigenvalue."
    ]
   },
   {
