added determinant fact 4

--- a/06_Ch_7_Eigenvalues/082-determinants.ipynb
+++ b/06_Ch_7_Eigenvalues/082-determinants.ipynb
@@ -45,7 +45,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- the relationship between the determinant of a square matrix and its invertibility,\n",
+    "- some key facts of the determinant,\n",
     "- several ways to find the determinant of a matrix,\n",
     "- (optional) the formal definition of a determinant."
    ]
@@ -80,6 +80,9 @@
     "3. $A^{-1}$ exists, i.e., $A$ is nonsingular, if and only if, $\\det A \\neq 0$.\n",
     "\n",
     "A corollary of Fact 3, which we will use in our eigenvalue computations, is that $A$ is singular if and only if $\\det A = 0$.\n",
+    "\n",
+    "4. If $U$ is a block upper diagonal matrix, i.e., if $U = \\bm U_{11} & U_{12} \\\\ 0 & U_{22}\\em$ for $U_{ij}$ of compatible dimension, then $\\det U = \\det{U_{11}} \\cdot\\det{U_{22}}$, i.e., the determinant of $U$ is given by the products of the determinants of its block diagonals.\n",
+    "\n",
     ":::\n",
     "\n",
     "These facts are all we need for now to get started finding eigenvalues.\n",
