added subsection header

--- a/06_Ch_7_Eigenvalues/083-characteristic_equations.ipynb
+++ b/06_Ch_7_Eigenvalues/083-characteristic_equations.ipynb
@@ -71,6 +71,8 @@
     "The characteristic equation is a $n^{\\text{th}}$-degree polynomial equation in terms of $\\lambda$. This can be seen by fully expanding the equation using the entries of $A$ (e.g., via the [Laplace expansion](#laplace-expansion-defn)).\n",
     ":::\n",
     "\n",
+    "## Finding the Eigenvalues by Solving the Characteristic Equation\n",
+    "\n",
     "We now have all the pieces needed to find the eigenvalues for small matrices (which is all we will ever ask you to compute, unless there is a special structure). This leads to the following method for finding all [eigenvalue, eigenvector] pairs for a square matrix $A$:\n",
     "\n",
     "* First, we find all solutions $\\lambda$ to the characteristic equation $\\det(A - \\lambda)$ to get the eigenvalues.\n",
