refactoring and created qr page

--- a/06_Ch_7_Eigenvalues/081-eigenvalues_eigenvectors.ipynb
+++ b/06_Ch_7_Eigenvalues/081-eigenvalues_eigenvectors.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "This theorem gives us a plan of attack: to find all $\\lambda$ for which $A - \\lambda I$ is singular! In the next few sections, we'll introduce the machinery needed to apply this method, known as the method of characteristic equations, for finding eigenvalues of small matrices.\n",
     "\n",
-    "In general, this method is not applied for large matrices because it becomes more difficult and numerically unstable to find the roots of the characteristic equation, whose degree incrceases with the size of the matrix. For larger matrices, an algorithm based on the QR decomposition is used; we'll cover this a few sections down the line."
+    "In general, this method is not applied for large matrices due to numerical issues. For larger matrices, an algorithm based on the QR decomposition is used; we'll cover this a few sections down the line."
    ]
   },
   {
