--- a/06_Ch_7_Eigenvalues/083-characteristic_equations.ipynb
+++ b/06_Ch_7_Eigenvalues/083-characteristic_equations.ipynb
@@ -112,7 +112,9 @@
     "\n",
     "We typically only distinguish linearly independent eignevectors. In this case, we would say that $\\vv{v_1} = \\bm 1\\\\1 \\em$ is *the* eigenvector corresponding to $\\lambda_2 = 4$, although it is understood that any vector $\\vv{\\tilde{v_1}} = a \\vv{v_1}$, for $a \\neq 0$, is also a valid eigenvector.\n",
     "\n",
-    ":::\n"
+    ":::\n",
+    "\n",
+    "In general, the characteristic equation cannot easily be factored because there is no formula to exactly compute the roots of any polynomial of degree 5 or higher. One way to get around this is to use root-finding algorithms such as Newton's method, but these may converge slowly or have numerical issues. In the next section, we'll introduce an algorithm based on the [QR decomposition](#qr-alg) which alleviates these issues.\n"
    ]
   },
   {
