started on qr algorithm

--- a/06_Ch_7_Eigenvalues/084-qr_algorithm.ipynb
+++ b/06_Ch_7_Eigenvalues/084-qr_algorithm.ipynb
@@ -45,6 +45,8 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
+    "- the definition of similar matrices,\n",
+    "- the definition of the Schur decomposition of a matrix,\n",
     "- how to use the QR algorithm to find the eigenvalues of a matrix."
    ]
   },
@@ -59,7 +61,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The QR Algorithm"
+    "# Motivations for the QR Algorithm\n",
+    "\n",
+    "Before we introduce the QR algorithm, we introduce a few motivating definitions.\n",
+    "\n",
+    "## Similar Matrices\n",
+    "\n",
+    "First, we introduce the notion of *similar matrices*:\n",
+    "\n",
+    ":::{prf:definition} Similar matrices\n",
+    ":label: similar-matrices-defn\n",
+    "\n",
+    "We say matrices $n\\times n$ matrices $A$ and $B$ are similar if $B = P^{-1}AP$ for some invertible matrix $P$.\n",
+    ":::\n",
+    "\n",
+    "A key property of similar matrices is that they have the same eigenvalues:\n",
+    "\n",
+    ":::{prf:theorem} Eigenvalues of similar matrices\n",
+    ":label: similar-matrices-thm\n",
+    "\n",
+    "Suppose $A$ and $B$ are similar. Then, $\\lambda$ is an eigenvalue of $A$ if and only if $\\lambda$ is an eigenvalue of $B$.\n",
+    ":::\n",
+    "\n",
+    "To see why this is true, suppose that $\\lambda$ is an eigenvalue of $B$, i.e., $B\\vv v = \\lambda \\vv v$ for some nonzero $\\vv v$. Then, \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    B \\vv v = \\lambda \\vv v &\\implies (P^{-1}AP) \\vv v = \\lambda \\vv v\\\\\n",
+    "    &\\implies A(P \\vv v) = P (\\lambda \\vv v) = \\lambda (P\\vv v)\n",
+    "\\end{align*}\n",
+    "\n",
+    "meaning that $P\\vv v$ is an eigenvector of $A$, with the same eigenvalue of $\\lambda$. \n",
+    "\n",
+    "This motivates the following method: if we want to find the eigenvalues of $B$, we could try to write it in the form $A = P^{-1}BP$, where $B$ is a matrix for which it is easy to find the eigenvalues! This is exactly the motivation for the QR algorithm, which is an iterative algorithm for finding the *Schur decomposition* of $A$.\n",
+    "\n",
+    "We will revisit similar matrices in more detail a few sections down the line.\n",
+    "\n",
+    "## The Schur Decomposition\n",
+    "\n",
+    "Next, we define the Schur decomposition:\n",
+    "\n",
+    ":::{prf:theorem} The Schur decomposition\n",
+    ":label: schur-decomposition-thm\n",
+    "\n",
+    "Every real square matrix $A$ can be written in the form:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A = Q^\\top U Q.\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $Q$ is orthogonal (so that $Q^\\top = Q^{-1}$) and $U$ is upper triangular. This is known as a *Schur decomposition* of $A$, and in general is not unique.\n",
+    ":::\n",
+    "\n",
+    "It is not immediately obvious why every matrix has a Schur decomposition, but a good proof can be found [here](https://en.wikipedia.org/wiki/Schur_decomposition#Proof). The essence of the proof is to show that, given a real square matrix $A$, one can always perform a sequence of conjugation operations by orthogonal matrices (i.e., left multiply by $Q^\\top$ and right multiply by $Q$) to transform $A$ into an upper triangular matrix.\n",
+    "\n",
+    "Next, we show that given a Schur decomposition $A = Q^\\top U Q$, it's easy to find the eigenvalues of $A$.\n",
+    "\n",
+    "## The Eigenvalues of a Triangular Matrix\n",
+    "\n",
+    "It turns out that it's easy to find the eigenvalues of any triangular square matrix; just look at the diagonal entries!\n",
+    "\n",
+    ":::{prf:theorem} The eigenvalues of a triangular matrix\n",
+    ":label: triangular-eigen-thm\n",
+    "\n",
+    "Let $U$ be a $n\\times n$ triangular matrix. Then, $U$ has eigenvalues $u_{ii}$, for $i = 1, ..., n$. These are the diagonal entries of $U$.\n",
+    ":::\n",
+    "\n",
+    "To see why this is the case, we'll show, for am $n\\times n$ triangular matrix $U$, that $\\det (U - \\lambda I) = 0$ if and only if $\\lambda$ is on the diagonal of $U$:\n",
+    "\n",
+    "* If $U$ is on the diagonal of $U$, then $U - \\lambda I$ has a zero on its diagonal. Convince yourself that this implies that the row echelon form of $U$ can't have $n$ pivots, meaning that $U$ is singular (noninvertible).\n",
+    "\n",
+    "* If $\\lambda$ isn't on the diagonal of $U$, then $U - \\lambda I$ has all nonzero diagonal elements. It thus follows that $U - \\lambda I$ has $n$ pivots, and therefore is nonsingular (invertible).\n",
+    "\n",
+    "We conclude that the eigenvalues of $U$ are exactly its diagonal elements.\n",
+    "\n",
+    "# The QR Algorithm\n",
+    "\n",
+    "Equipped with these facts, the motivation behind the QR algorithm is as follows. \n",
+    "\n",
+    "* First, we find an *approximation* to a Schur decomposition $A = Q^\\top U Q$.\n",
+    "\n",
+    "* The eigenvalues of $A$ are thus the diagonal entries of $U$.\n",
+    "\n",
+    "## Approximating a Schur Decomposition\n",
+    "\n",
+    "The question thus becomes, how do we find an approximate Schur decomposition for $A$? \n",
+    "\n",
+    "## Pseudocode for the QR Algorithm\n"
    ]
   }
  ],
