started repeated & complex eigenvalues page

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/085-eigenspaces.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/085-eigenspaces.ipynb
@@ -94,8 +94,8 @@
     "In summary, the eigenvalues and \"basis eigenvector\" pairs for this matrix are:\n",
     "\n",
     "\\begin{align*}\n",
-    "    \\lambda_1 = 2,\\quad \\vv{v_1} = \\bm 1\\\\0\\\\0 \\em, \\vv{\\hat{v_1}} = \\bm 0\\\\1\\\\-1 \\em\\\\\n",
-    "    \\lambda_2 = 4 \\quad \\vv{v_2} = \\bm -1\\\\1\\\\1 \\em.\n",
+    "    \\lambda_1 = 2,&\\quad \\vv{v_1} = \\bm 1\\\\0\\\\0 \\em, \\vv{\\hat{v_1}} = \\bm 0\\\\1\\\\-1 \\em\\\\\n",
+    "    \\lambda_2 = 4,& \\quad \\vv{v_2} = \\bm -1\\\\1\\\\1 \\em.\n",
     "\\end{align*}\n",
     "\n",
     ":::\n",
